--- a/OneDo/View/Modals/NoteEditor.xaml
+++ b/OneDo/View/Modals/NoteEditor.xaml
@@ -152,7 +152,7 @@
                             <FontIcon Grid.Column="0"
                                       Foreground="{ThemeResource SystemControlForegroundBaseMediumLowBrush}"
                                       FontSize="16"
-                                      Glyph="&#xE787;" />
+                                      Glyph="{TemplateBinding Tag}" />
                             <ContentPresenter x:Name="ContentPresenter"
                                               Grid.Column="1"
                                               Padding="{TemplateBinding Padding}"
@@ -572,6 +572,7 @@
                             Style="{StaticResource PickerButtonStyle}"
                             Foreground="{x:Bind VM.DatePicker.Date, Mode=OneWay, Converter={StaticResource DateForegroundConverter}}"
                             Content="{x:Bind VM.DatePicker.DateText, Mode=OneWay}"
+                            Tag="&#xE787;"
                             Tapped="DateButton_Tapped">
                         <FlyoutBase.AttachedFlyout>
                             <Flyout x:Name="DatePickerFlyout" FlyoutPresenterStyle="{StaticResource DateFlyoutPresenterStyle}">
