--- a/OneDo/View/Controls/TimePicker.xaml
+++ b/OneDo/View/Controls/TimePicker.xaml
@@ -105,10 +105,10 @@
                      Height="240"
                      Stroke="{ThemeResource SystemControlForegroundChromeHighBrush}"
                      StrokeThickness="1" />
-            <Ellipse Canvas.Left="120"
-                     Canvas.Top="120"
-                     Width="80"
-                     Height="80"
+            <Ellipse Canvas.Left="110"
+                     Canvas.Top="110"
+                     Width="100"
+                     Height="100"
                      Fill="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
                      Stroke="{ThemeResource SystemControlForegroundChromeHighBrush}"
                      StrokeThickness="1" />
@@ -117,6 +117,16 @@
                      Width="8"
                      Height="8"
                      Fill="{ThemeResource SystemControlBackgroundAccentBrush}" />
+            <Ellipse x:Name="HourIndicator"
+                     Width="40"
+                     Height="40"
+                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
+                     Opacity="0.25" />
+            <Ellipse x:Name="MinuteIndicator"
+                     Width="40"
+                     Height="40"
+                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
+                     Opacity="0.25" />
         </Canvas>
 
         <Button Grid.Row="1"
