--- a/OneDo/View/Controls/TimePicker.xaml
+++ b/OneDo/View/Controls/TimePicker.xaml
@@ -81,9 +81,8 @@
         <Canvas x:Name="RootCanvas"
                 Grid.Row="0"
                 Grid.ColumnSpan="2"
-                Width="320"
-                Height="320"
-                Margin="16"
+                Width="300"
+                Height="300"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Background="Transparent"
@@ -92,41 +91,36 @@
                 ManipulationMode="TranslateX,TranslateY"
                 ManipulationStarted="RootGrid_ManipulationStarted"
                 Tapped="RootGrid_Tapped">
-            <Ellipse Canvas.Left="0"
-                     Canvas.Top="0"
-                     Width="320"
-                     Height="320"
-                     Fill="{ThemeResource SystemControlBackgroundAltHighBrush}"
+            <!--<Ellipse Width="300"
+                     Height="300"
+                     Fill="{ThemeResource SystemControlBackgroundListLowBrush}"
                      Stroke="{ThemeResource SystemControlForegroundChromeHighBrush}"
-                     StrokeThickness="1" />
-            <Ellipse Canvas.Left="40"
-                     Canvas.Top="40"
-                     Width="240"
-                     Height="240"
+                     StrokeThickness="0" />
+            <Ellipse Width="204"
+                     Height="204"
+                     Canvas.Top="48"
+                     Canvas.Left="48"
+                     Fill="{ThemeResource SystemControlBackgroundListLowBrush}"
                      Stroke="{ThemeResource SystemControlForegroundChromeHighBrush}"
-                     StrokeThickness="1" />
-            <Ellipse Canvas.Left="110"
-                     Canvas.Top="110"
-                     Width="100"
-                     Height="100"
+                     StrokeThickness="0" />
+            <Ellipse Width="108"
+                     Height="108"
+                     Canvas.Top="96"
+                     Canvas.Left="96"
                      Fill="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
                      Stroke="{ThemeResource SystemControlForegroundChromeHighBrush}"
-                     StrokeThickness="1" />
-            <Ellipse Canvas.Left="156"
-                     Canvas.Top="156"
-                     Width="8"
-                     Height="8"
-                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}" />
-            <Ellipse x:Name="HourIndicator"
-                     Width="40"
-                     Height="40"
-                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
-                     Opacity="0.25" />
+                     StrokeThickness="0" />-->
+
             <Ellipse x:Name="MinuteIndicator"
-                     Width="40"
-                     Height="40"
+                     Width="48"
+                     Height="48"
                      Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
-                     Opacity="0.25" />
+                     Opacity="0" />
+            <Ellipse x:Name="HourIndicator"
+                     Width="48"
+                     Height="48"
+                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
+                     Opacity="0" />
         </Canvas>
 
         <Button Grid.Row="1"
