--- a/OneDo/View/Controls/DatePicker.xaml
+++ b/OneDo/View/Controls/DatePicker.xaml
@@ -5,7 +5,6 @@
                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                        xmlns:controls="using:OneDo.View.Controls"
                        xmlns:v="using:OneDo.View"
-                       d:DesignWidth="282"
                        mc:Ignorable="d">
 
     <v:ExtendedUserControl.Resources>
@@ -104,7 +103,7 @@
 
     <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
           BorderBrush="{ThemeResource SystemControlForegroundChromeHighBrush}"
-          BorderThickness="1">
+          BorderThickness="0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -119,7 +118,7 @@
                       Grid.Row="0"
                       Grid.ColumnSpan="2"
                       Style="{StaticResource CalendarViewStyle}"
-                      SelectedDatesChanged="CalendarView_SelectedDatesChanged" />
+                      SelectedDatesChanged="CalendarView_SelectedDatesChanged" HorizontalAlignment="Stretch" />
 
         <Button Grid.Row="1"
                 Grid.Column="0"
